--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
     <script src="index.js" defer></script>
 </head>
 <body>
-    <h1>Netflix Clone</h1>
+    <header id="header">
+        <div class="container">
+            <div class="left-container">
+                <img src="https://www.google.com/search?sxsrf=APwXEddJlD7lg4lYj7eaSBefC1fnhsBZOg:1687156445475&q=neflix+logo&tbm=isch&chips=q:netflix+logo,g_1:transparent+png:Wr4oCHm87p8%3D&usg=AI4_-kTDsdBermATlsksoi8JlMmu98paog&sa=X&ved=2ahUKEwj1ovPE287_AhUDV2wGHeZlCvoQgIoDKAF6BAgdEBU&biw=1536&bih=792&dpr=1.25#imgrc=5hi3e7TCiyFvgM">
+                <ul class="main-nav">
+                    <li class="nav-item">Home</li>
+                    <li class="nav-item">Tv Shows</li>
+                    <li class="nav-item">Movies</li>
+                    <li class="nav-item">News & Popular</li>
+                    <li class="nav-item">My List</li>
+                    <li class="nav-item">Browse by Languages</li>
+                </ul>
+
+            </div>
+            <div class="right-container"></div>
+        </div>
+    </header>
 </body>
 </html>
