--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header id="header">
         <div class="container">
             <div class="left-container">
-                <img src="https://www.google.com/search?sxsrf=APwXEddJlD7lg4lYj7eaSBefC1fnhsBZOg:1687156445475&q=neflix+logo&tbm=isch&chips=q:netflix+logo,g_1:transparent+png:Wr4oCHm87p8%3D&usg=AI4_-kTDsdBermATlsksoi8JlMmu98paog&sa=X&ved=2ahUKEwj1ovPE287_AhUDV2wGHeZlCvoQgIoDKAF6BAgdEBU&biw=1536&bih=792&dpr=1.25#imgrc=5hi3e7TCiyFvgM">
+                <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fassets.stickpng.com%2Fimages%2F580b57fcd9996e24bc43c529.png&tbnid=5hi3e7TCiyFvgM&vet=12ahUKEwjb95rh3c7_AhXUMbcAHbzaBfEQMygAegUIARDLAQ..i&imgrefurl=https%3A%2F%2Fwww.stickpng.com%2Fimg%2Ficons-logos-emojis%2Ftech-companies%2Fnetflix-logo&docid=MIVx37TueD2MiM&w=2560&h=1440&q=netflix%20logo&ved=2ahUKEwjb95rh3c7_AhXUMbcAHbzaBfEQMygAegUIARDLAQ" alt="Netflix">
                 <ul class="main-nav">
                     <li class="nav-item">Home</li>
                     <li class="nav-item">Tv Shows</li>
